@startuml
interface com.gwesaro.mycheeseornothing.Question.QuestionCollectionEventListener {
~ void onFailed(Exception)
~ void onQuestionsChanged(ArrayList<Question>,QuestionMode)
}
class com.gwesaro.mycheeseornothing.QuestionsItemActivity {
# void onCreate(Bundle)
}
class com.gwesaro.mycheeseornothing.StatsActivity {
# void onCreate(Bundle)
}
class com.gwesaro.mycheeseornothing.App {
+ QuestionCollection questionCollection
+ void onCreate()
}
class com.gwesaro.mycheeseornothing.Question.QuestionCollection {
- Collection<QuestionCollectionEventListener> eventListeners
+ void addQuestionCollectionEventListener(QuestionCollectionEventListener)
+ void removeQuestionCollectionEventListener(QuestionCollectionEventListener)
- void onFailed(Exception)
- void onQuestionsChanged(ArrayList<Question>,QuestionMode)
+ void fetchQuestions(QuestionMode)
}
class com.gwesaro.mycheeseornothing.Question.Quiz {
- QuestionMode mode
- int modelOrdinal
- int[] mixedIndex
- int indexQuestion
- Question currentQuestion
- int validAnswersCount
- ArrayList<Question> questions
+ {static} Creator<Quiz> CREATOR
- int getNumberOfQuestions()
+ void mixQuestions()
+ String[] mixAnswers(String[])
+ Question get(int)
+ int getValidAnswersCount()
+ int getIndexQuestion()
+ int getQuestionsCount()
+ QuestionMode getMode()
+ boolean hasNext()
+ Question getNextQuestion()
+ Question getCurrentQuestion()
+ boolean CheckAnswer(String)
+ void writeToParcel(Parcel,int)
+ int describeContents()
}
class com.gwesaro.mycheeseornothing.QuestionAdapter {
~ List<Question> questions
+ void onClick(View)
+ QuestionAdapter.ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(QuestionAdapter.ViewHolder,int)
+ int getItemCount()
}
class com.gwesaro.mycheeseornothing.QuestionAdapter.ViewHolder {
~ TextView listQuestionTextView
~ TextView listModeTextView
~ ImageView iconListImageView
~ TextView listAnswerTextView
}
class com.gwesaro.mycheeseornothing.AboutActivity {
# void onCreate(Bundle)
}
class com.gwesaro.mycheeseornothing.Question.Question {
+ String question
+ String[] answers
+ String answer
+ String imagePath
+ QuestionMode mode
+ int modeOrdinal
+ {static} Creator<Question> CREATOR
+ void writeToParcel(Parcel,int)
+ int describeContents()
+ boolean isValid(String)
+ String toString()
}
class com.gwesaro.mycheeseornothing.QuestionActivity {
- String TAG
- Quiz quiz
- RadioGroup radioGroup
- Button submitButton
- TextView resultTextView
- TextView detailResultTextView
- ColorStateList colorStateList
- ImageView questionImageView
# void onCreate(Bundle)
+ void onBackPressed()
- void process()
- void handleProcess()
- void displayQuestionResponse()
- void updateInterface(Question)
- void handleRadioUpdate(String[])
- void setRadioButtonColor(RadioButton)
- void navigateToStats()
}
class com.gwesaro.mycheeseornothing.QuestionsListActivity {
# void onCreate(Bundle)
}
class com.gwesaro.mycheeseornothing.MainActivity {
- String TAG
- QuestionCollection questionCollection
- boolean isQuiz
# void onCreate(Bundle)
# void onResume()
# void onPause()
+ void onBackPressed()
+ void onFailed(Exception)
+ void onQuestionsChanged(ArrayList<Question>,QuestionMode)
}


java.util.EventListener <|-- com.gwesaro.mycheeseornothing.Question.QuestionCollectionEventListener
androidx.appcompat.app.AppCompatActivity <|-- com.gwesaro.mycheeseornothing.QuestionsItemActivity
androidx.appcompat.app.AppCompatActivity <|-- com.gwesaro.mycheeseornothing.StatsActivity
android.app.Application <|-- com.gwesaro.mycheeseornothing.App
android.os.Parcelable <|.. com.gwesaro.mycheeseornothing.Question.Quiz
com.gwesaro.mycheeseornothing.OnClickListener <|.. com.gwesaro.mycheeseornothing.QuestionAdapter
com.gwesaro.mycheeseornothing.Adapter <|-- com.gwesaro.mycheeseornothing.QuestionAdapter
com.gwesaro.mycheeseornothing.QuestionAdapter +.. com.gwesaro.mycheeseornothing.QuestionAdapter.ViewHolder
com.gwesaro.mycheeseornothing.ViewHolder <|-- com.gwesaro.mycheeseornothing.QuestionAdapter.ViewHolder
androidx.appcompat.app.AppCompatActivity <|-- com.gwesaro.mycheeseornothing.AboutActivity
android.os.Parcelable <|.. com.gwesaro.mycheeseornothing.Question.Question
androidx.appcompat.app.AppCompatActivity <|-- com.gwesaro.mycheeseornothing.QuestionActivity
androidx.appcompat.app.AppCompatActivity <|-- com.gwesaro.mycheeseornothing.QuestionsListActivity
com.gwesaro.mycheeseornothing.Question.QuestionCollectionEventListener <|.. com.gwesaro.mycheeseornothing.MainActivity
androidx.appcompat.app.AppCompatActivity <|-- com.gwesaro.mycheeseornothing.MainActivity
@enduml